# boxi

./: .gitignore  LICENSE  README.md  demo_session.txt  pyproject.toml
src/boxi/: __init__.py  artifacts.py  cli.py  config.py  console.py  logging_config.py  orchestrator.py  runtime.py
src/boxi/adapters/: __init__.py  cracker.py  ftp.py  nmap.py  ocr.py  smb.py  sqlitex.py  winrm.py
src/boxi/commands/: __init__.py  base.py  commands.py  core.py
src/boxi/core/: __init__.py  architecture.py  database.py  logging.py
src/boxi/stages/: __init__.py  ftp_enum.py  hash_crack.py  ocr_creds.py  port_scan.py  smb_loot.py  smb_spray.py  sqlite_parse.py  winrm_spray.py
src/boxi/utils/: __init__.py  fs.py  process.py  text.py
tests/: test_adapters.py  test_artifacts.py  test_core.py  test_orchestrator.py
